Project ecommerce_minimal {
  database_type: "MySQL"
  Note: "Minimal clean e-commerce model with proper relations"
}

Table customer {
  id int [pk, increment]
  full_name varchar(255) [not null]
  email varchar(255) [not null, unique]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: "Represents a registered user placing orders"
}

Table product {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  price decimal(10,2) [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: "Sellable product with current price"
}

Table orders {
  id int [pk, increment]
  customer_id int [not null]
  status order_status [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    customer_id
  }

  Note: "Purchase container created by customer"
}

Table order_item {
  order_id int [not null]
  product_id int [not null]
  quantity int [not null, note: "must be > 0"]
  unit_price decimal(10,2) [not null, note: "Snapshot of product price at purchase"]

  Indexes {
    (order_id, product_id) [pk]
    product_id
  }


  Note: "Join table Order ↔ Product with additional attributes"
}

Table payment {
  order_id int [pk]
  amount decimal(10,2) [not null]
  method payment_method [not null]
  paid_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  Note: "One-to-one payment for order"
}

Ref: orders.customer_id > customer.id [delete: cascade]

Ref: order_item.order_id > orders.id [delete: cascade]
Ref: order_item.product_id > product.id

Ref: payment.order_id - orders.id [delete: cascade]

Enum order_status {
  NEW
  PAID
  CANCELED
}

Enum payment_method {
  SWISH
  CARD
}
